@@ -60,6 +60,7 @@
 #include "init.h"
 #include "initopts.h"
 #include "items.h"
+#include "kuserok.h"
 #include "log.h"
 #include "options.h"
 #include "prompter.h"
@@ -423,18 +424,8 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 
 	/* If we got this far, check the target user's .k5login file. */
 	if ((retval == PAM_SUCCESS) && options->user_check) {
-		if ((options->tokens != 1) &&
-		    (options->ignore_afs == 0) &&
-		    tokens_useful()) {
-			v5_save_for_tokens(ctx, stash, user, userinfo,
-					   options, NULL);
-			if (stash->v4present) {
-				v4_save_for_tokens(ctx, stash, userinfo,
-						   options, NULL);
-			}
-			tokens_obtain(ctx, stash, options, userinfo, 1);
-		}
-		if (krb5_kuserok(ctx, userinfo->principal_name, user) == 0) {
+		if (_pam_krb5_kuserok(ctx, stash, options, userinfo, user,
+				      userinfo->uid, userinfo->gid) != TRUE) {
 			notice("account checks fail for '%s': user disallowed "
 			       "by .k5login file for '%s'",
 			       userinfo->unparsed_name, user);
@@ -444,14 +435,6 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 				debug("'%s' passes .k5login check for '%s'",
 				      userinfo->unparsed_name, user);
 			}
-		}
-		if ((options->tokens != 1) &&
-		    (options->ignore_afs == 0) &&
-		    tokens_useful()) {
-			if (stash->v4present) {
-				v4_destroy(ctx, stash, options);
-			}
-			v5_destroy(ctx, stash, options);
 		}
 	}
 
